--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.16.0",
+    "geist": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
